# rigid

./: README.md  pyproject.toml
.github/: RELEASE.md
.github/workflows/: publish.yml  test.yml
src/rigid/: __init__.py
tests/: test_rigid.py
