[project]
name = "rigid"
version = "0.1.0"
description = "Universally unique lexicographically sortable identifier with cryptographical offline integrity check and meta appendix support"
readme = "README.md"
authors = [
    { name = "bahadrix" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.1",
    "python-ulid>=3.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
